# market-rental-manager

./: .gitignore  README.md  components.d.ts  data.json  index.html  package-lock.json  package.json  server-pg.cjs  server.cjs  spa-server.py  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CalendarView.vue  OCRInput.vue  RentalForm.vue  StallForm.vue  VoiceInput.vue
src/services/: api.ts
src/stores/: auth.ts  rental.ts  stall.ts
src/types/: auth.ts  index.ts
src/views/: AuthView.vue  HomeView.vue  RecordView.vue  SettingsView.vue  ShareView.vue  StatsView.vue  UserManagementView.vue
